[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/icons/handcuffs.png" type="Texture" id=1]
[ext_resource path="res://Assets/background_fullres.png" type="Texture" id=2]
[ext_resource path="res://Assets/icons/coins.png" type="Texture" id=3]
[ext_resource path="res://Assets/icons/shaking-hands.png" type="Texture" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://Assets/font/OldNewspaperTypes.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 292 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 544, 8 )

[node name="Main" type="Node"]
script = ExtResource( 6 )

[node name="MissionArea" type="TextureRect" parent="."]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_bottom = 1.07288e-06
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCArea" type="ColorRect" parent="."]
anchor_right = 0.125
anchor_bottom = 1.0
margin_top = 1.07288e-06
margin_right = -16.0
margin_bottom = 1.07288e-06
mouse_filter = 2
color = Color( 1, 1, 1, 0.470588 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="node_NPC1" type="Node2D" parent="NPCArea"]
position = Vector2( 72, 72 )

[node name="node_NPC2" type="Node2D" parent="NPCArea"]
position = Vector2( 72, 168 )

[node name="node_NPC3" type="Node2D" parent="NPCArea"]
position = Vector2( 72, 264 )

[node name="node_NPC4" type="Node2D" parent="NPCArea"]
position = Vector2( 72, 360 )

[node name="node_NPC5" type="Node2D" parent="NPCArea"]
position = Vector2( 72, 456 )

[node name="node_NPC6" type="Node2D" parent="NPCArea"]
position = Vector2( 72, 552 )

[node name="node_NPC7" type="Node2D" parent="NPCArea"]
position = Vector2( 72, 648 )

[node name="GameArea" type="ColorRect" parent="."]
anchor_left = 0.109
anchor_right = 0.109
margin_left = 4.47999
margin_right = 1144.48
margin_bottom = 720.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreArea" type="ColorRect" parent="GameArea"]
margin_right = 924.0
margin_bottom = 104.0
mouse_filter = 2
color = Color( 0.356863, 0.352941, 0.352941, 0.694118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="ColorRect" parent="GameArea/ScoreArea"]
anchor_left = 0.017
anchor_top = 0.154
anchor_right = 0.017
anchor_bottom = 0.154
margin_left = 0.291997
margin_top = -0.0160015
margin_right = 284.292
margin_bottom = 71.984
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameArea/ScoreArea/Money"]
margin_right = 72.0
margin_bottom = 72.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="Money_label" type="Label" parent="GameArea/ScoreArea/Money"]
anchor_left = 0.156
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 34.76
custom_fonts/font = SubResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reputation" type="ColorRect" parent="GameArea/ScoreArea"]
anchor_left = 0.348
anchor_top = 0.154
anchor_right = 0.348
anchor_bottom = 0.154
margin_left = -5.55202
margin_top = -0.0160015
margin_right = 286.448
margin_bottom = 71.984
rect_pivot_offset = Vector2( 256, 16 )
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameArea/ScoreArea/Reputation"]
margin_right = 72.0
margin_bottom = 72.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="Reputation_label" type="Label" parent="GameArea/ScoreArea/Reputation"]
anchor_left = 0.156
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 34.072
margin_right = -3.05176e-05
custom_fonts/font = SubResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compromised" type="ColorRect" parent="GameArea/ScoreArea"]
anchor_left = 0.678
anchor_top = 0.154
anchor_right = 0.678
anchor_bottom = 0.154
margin_left = -2.47203
margin_top = -0.0160015
margin_right = 277.528
margin_bottom = 71.984
rect_pivot_offset = Vector2( 256, 16 )
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameArea/ScoreArea/Compromised"]
margin_right = 72.0
margin_bottom = 72.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="Compromised_label" type="Label" parent="GameArea/ScoreArea/Compromised"]
anchor_left = 0.156
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 34.072
custom_fonts/font = SubResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeArea" type="ColorRect" parent="GameArea"]
anchor_left = 0.812
anchor_right = 0.812
margin_left = -1.67997
margin_right = 210.32
margin_bottom = 104.0
mouse_filter = 2
color = Color( 0.00392157, 0.00392157, 0.00392157, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="GameArea/TimeArea"]
margin_left = 20.0
margin_top = 16.0
margin_right = 196.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Day 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 176.0
margin_top = 136.0
margin_right = 1248.0
margin_bottom = 688.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 172, 416 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 712, 128 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 712, 696 )
shape = SubResource( 4 )
[connection signal="timeout" from="MissionTimer" to="." method="_on_MissionTimer_timeout"]
